# crypto_price_tracker

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.consumer  Dockerfile.flink  Dockerfile.producer  README.md  consumer.cpp  docker-compose.yml  init.sql  main.cpp  producer.cpp  trade.proto  trades_job.py  vcpkg.json
grafana/dashboards/: market-analytics.json  system-health.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml
prometheus/: prometheus.yml
